--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       </ul>
     </section>  
 
-    <script src="http://unpkg.com/jquery"></script>
-    <script src="http://unpkg.com/axios/dist/axios.js"></script>
+    <script src="https://unpkg.com/jquery"></script>
+    <script src="https://unpkg.com/axios/dist/axios.js"></script>
     <script src="tvMaze.js"></script>
 
     </div>
